--- a/.meta/tmpl/Dockerfile.tmpl
+++ b/.meta/tmpl/Dockerfile.tmpl
@@ -15,11 +15,14 @@
 {{ $kubectl := index .config.tools "kubernetes/kubectl" -}}
 {{ $sops := index .config.tools "mozilla/sops" -}}
 {{ $drone := index .config.tools "harness/drone-cli" -}}
+{{ $kubectx := index .config.tools "ahmetb/kubectx" -}}
+{{ $starship := index .config.tools "starship/starship" -}}
+{{ $hadolint := index .config.tools "hadolint/hadolint" -}}
 
 FROM {{ tpl "image" .config.image (dict "version" $golang) }} as core
 # hadolint ignore=DL3018
 RUN apk add --update --no-cache \
-    bash curl git openssh openssh-client jq graphviz ncurses nano libc6-compat {{ join .config.extraPackages " " }}
+    bash curl git openssh openssh-client jq graphviz ncurses nano libc6-compat bash-completion {{ join .config.extraPackages " " }}
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
@@ -62,6 +65,10 @@ FROM core as direnv
 RUN curl -L https://github.com/direnv/direnv/releases/download/v{{ $direnv }}/direnv.linux-amd64 -o /tmp/direnv \
     && chmod +x /tmp/direnv
 
+FROM core as hadolint
+RUN curl -L https://github.com/hadolint/hadolint/releases/download/v{{ $hadolint }}/hadolint-Linux-x86_64 -o /tmp/hadolint \
+    && chmod +x /tmp/hadolint
+
 FROM core as op
 RUN curl -L https://cache.agilebits.com/dist/1P/op/pkg/v{{ $op }}/op_linux_amd64_v{{ $op }}.zip -o /tmp/op.zip \
     && unzip /tmp/op.zip -d /tmp/ && rm /tmp/op.zip
@@ -69,6 +76,13 @@ RUN curl -L https://cache.agilebits.com/dist/1P/op/pkg/v{{ $op }}/op_linux_amd64
 FROM core as kubectl
 RUN curl -L https://storage.googleapis.com/kubernetes-release/release/v{{ $kubectl }}/bin/linux/amd64/kubectl -o /tmp/kubectl \
     && chmod +x /tmp/kubectl
+
+FROM core as kubectx
+# hadolint ignore=DL4006
+RUN curl -L https://github.com/ahmetb/kubectx/releases/download/v{{ $kubectx }}/kubectx_v{{ $kubectx }}_linux_x86_64.tar.gz | tar zx \
+    && cp kubectx /tmp && chmod +x /tmp/kubectx \
+    && curl -L https://github.com/ahmetb/kubectx/releases/download/v{{ $kubectx }}/kubens_v{{ $kubectx }}_linux_x86_64.tar.gz | tar zx \
+    && cp kubens /tmp && chmod +x /tmp/kubens
 
 FROM core as drone
 # hadolint ignore=DL4006
@@ -87,37 +101,18 @@ RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/v{{ $gol
 
 FROM core
 
-{{- if $usesGolang }}
-ENV CGO_ENABLED=0
-{{- end }}
-
 # hadolint ignore=DL3018,DL3013,DL3042
 RUN apk add --no-cache \
         python3 \
         py3-pip \
+        groff \
     && pip3 install --upgrade pip \
     && pip3 install --no-cache-dir \
         awscli \
     && rm -rf /var/cache/apk/*
 
-RUN sh -c "$(curl -fsSL https://starship.rs/install.sh)" -- -y
-
-ENV VERSIONS='{ \
-  {{- if $usesGolang }}
-  "golangci/golangci-lint":"v{{ $golangci_lint }}", \
-  {{- end }}
-  "hashicorp/terraform":"v{{ $terraform }}", \
-  "gruntwork-io/terragrunt":"v{{ $terragrunt }}", \
-  "terraform-linters/tflint":"v{{ $tflint }}", \
-  "terraform-linters/tflint-ruleset-aws":"v{{ $tflint_aws }}", \
-  "aquasecurity/tfsec":"v{{ $tfsec }}", \
-  "terraform-docs/terraform-docs":"v{{ $terraform_docs }}", \
-  "accurics/terrascan":"v{{ $terrascan }}", \
-  "casey/just":"{{ $just }}", \
-  "mozilla/sops":"v{{ $sops }}", \
-  "harness/drone-cli":"v{{ $drone }}", \
-  "direnv/direnv":"v{{ $direnv }}" \
-}'
+# hadolint ignore=DL4006
+RUN sh -c "$(curl -fsSL https://starship.rs/install.sh | sed 's|latest/download|download/v{{ $starship }}|g')" -- -y
 
 COPY --from=terraform /tmp/terraform /usr/local/bin/terraform
 COPY --from=terragrunt /tmp/terragrunt /usr/local/bin/terragrunt
@@ -132,13 +127,48 @@ COPY --from=op /tmp/op /usr/local/bin/op
 COPY --from=kubectl /tmp/kubectl /usr/local/bin/kubectl
 COPY --from=sops /tmp/sops /usr/local/bin/sops
 COPY --from=drone /tmp/drone /usr/local/bin/drone
+COPY --from=kubectx /tmp/kubectx /usr/local/bin/kctx
+COPY --from=kubectx /tmp/kubens /usr/local/bin/kns
+COPY --from=hadolint /tmp/hadolint /usr/local/bin/hadolint
+
+ENV GH_VERSIONS='{ \
+  {{- if $usesGolang }}
+  "golangci/golangci-lint":"v{{ $golangci_lint }}", \
+  {{- end }}
+  "hashicorp/terraform":"v{{ $terraform }}", \
+  "gruntwork-io/terragrunt":"v{{ $terragrunt }}", \
+  "terraform-linters/tflint":"v{{ $tflint }}", \
+  "terraform-linters/tflint-ruleset-aws":"v{{ $tflint_aws }}", \
+  "aquasecurity/tfsec":"v{{ $tfsec }}", \
+  "terraform-docs/terraform-docs":"v{{ $terraform_docs }}", \
+  "accurics/terrascan":"v{{ $terrascan }}", \
+  "ahmetb/kubectx":"v{{ $kubectx }}", \
+  "casey/just":"{{ $just }}", \
+  "direnv/direnv":"v{{ $direnv }}", \
+  "starship/starship":"v{{ $starship }}", \
+  "mozilla/sops":"v{{ $sops }}", \
+  "harness/drone-cli":"v{{ $drone }}", \
+  "hadolint/hadolint":"v{{ $hadolint }}" \
+}'
 
 RUN adduser -h /home/user -s /bin/bash -u 1000 -D user
 
-# hadolint ignore=SC2016
-RUN echo 'eval "$(direnv hook bash)"; eval $(ssh-agent); ssh-add; eval "$(starship init bash)"' > /home/user/.bashrc
+RUN mkdir /etc/bash_completion.d \
+    && kubectl completion bash > /etc/bash_completion.d/kubectl \
+    && curl -L "https://raw.githubusercontent.com/ahmetb/kubectx/v{{ $kubectx }}/completion/kubectx.bash" -o /etc/bash_completion.d/kubectx \
+    && curl -L "https://raw.githubusercontent.com/ahmetb/kubectx/v{{ $kubectx }}/completion/kubens.bash" -o /etc/bash_completion.d/kubens
 
-ENV PS1 '\s-\v:\w\$ '
+# hadolint ignore=SC2016
+RUN { \
+      echo 'eval "$(direnv hook bash)"'; \
+      echo 'eval $(ssh-agent);' 'ssh-add'; \
+      echo 'eval "$(starship init bash)"'; \
+      echo 'source /etc/profile.d/bash_completion.sh'; \
+    } > /home/user/.bashrc
+
+{{- if $usesGolang }}
+ENV CGO_ENABLED=0
+{{- end }}
 ENV PATH="/terraform/.meta/bin:${PATH}"
 ENV DIRENV_CONFIG="/terraform/.meta/direnv"
 ENV STARSHIP_CONFIG="/terraform/.meta/starship/config.toml"
