--- a/.meta/tmpl/Dockerfile.tmpl
+++ b/.meta/tmpl/Dockerfile.tmpl
@@ -113,7 +113,7 @@ FROM core
 # hadolint ignore=DL3008
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
-      python3 python3-pip {{ join .config.extraPackages " " }} \
+      python3 python3-pip less {{ join .config.extraPackages " " }} \
     && rm -rf /var/lib/apt/lists/*
 
 # hadolint ignore=DL3003,DL4006
