--- a/.meta/tmpl/Dockerfile.tmpl
+++ b/.meta/tmpl/Dockerfile.tmpl
@@ -21,6 +21,7 @@
 {{ $op := index .config.tools "1password" -}}
 {{ $kubectl := index .config.tools "kubernetes/kubectl" -}}
 {{ $awscli := index .config.tools "awscli" -}}
+{{ $git_secrets := index .config.tools "awslabs/git-secrets" -}}
 
 FROM {{ tpl "image" .config.image (dict "version" $golang) }} as core
 # hadolint ignore=DL3008
@@ -102,6 +103,14 @@ FROM core as sops
 RUN curl -fL https://github.com/mozilla/sops/releases/download/v{{ $sops }}/sops-v{{ $sops }}.linux -o /tmp/sops \
     && chmod +x /tmp/sops
 
+FROM core as git_secrets
+# hadolint ignore=DL3003,DL4006
+RUN tmp="$(mktemp -d)" \
+  && curl -Lf https://github.com/awslabs/git-secrets/archive/refs/tags/{{ $git_secrets }}.zip -o "$tmp/git-secrets.zip" \
+  && unzip "$tmp/git-secrets.zip" -d "$tmp" \
+  && cp "$tmp/git-secrets-{{ $git_secrets }}/git-secrets" /tmp/ \
+  && rm -rf "$tmp"
+
 {{ if $usesGolang }}
 FROM core as golangci_lint
 # hadolint ignore=DL4006
@@ -150,6 +159,9 @@ COPY --from=drone /tmp/drone /usr/local/bin/drone
 COPY --from=kubectx /tmp/kubectx /usr/local/bin/kctx
 COPY --from=kubens /tmp/kubens /usr/local/bin/kns
 COPY --from=hadolint /tmp/hadolint /usr/local/bin/hadolint
+COPY --from=git_secrets /tmp/git-secrets
+
+ENV GIT_SECRETS_VERSION="{{ $git_secrets }}"
 
 {{ $githubLast := index ($github | keys | reverse) 0 }}
 ENV GITHUB_VERSIONS='{ \
